--- a/examples/Color Classification.ipynb
+++ b/examples/Color Classification.ipynb
@@ -6,18 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ml5_test import ml5_init"
+    "from ml5_ipynb import ml5_init"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52e7a49150e246eea9255673e0fd75fe",
+       "model_id": "b7a6aa55f17e4f33b41ed3a9f79a051f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -30,29 +30,37 @@
     }
    ],
    "source": [
-    "test = ml5_init.ML5Class()\n",
-    "test.options['dataUrl'] = 'colorData.json'\n",
-    "test.options['inputs']=['r','g','b']\n",
-    "test.options['outputs'] = ['label']\n",
-    "test.options['task'] = 'classification'\n",
-    "test.options['debug']=True\n",
-    "test.initialize_framework()"
+    "nn = ml5_init.ML5Class()\n",
+    "nn.options['dataUrl'] = 'data/colorData.json'\n",
+    "nn.options['inputs']=['r','g','b']\n",
+    "nn.options['outputs'] = ['label']\n",
+    "nn.options['task'] = 'classification'\n",
+    "nn.options['debug']=True\n",
+    "nn.initialize_framework()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...................................................................................................................................................................................................done\n"
+     ]
+    }
+   ],
    "source": [
-    "test.normalize_data()\n",
+    "nn.normalize_data()\n",
     "trainingOptions = {'epochs': 20, 'batchSize' : 64}\n",
-    "test.train_data(trainingOptions)"
+    "nn.train_data(trainingOptions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,47 +75,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "......done\n",
+      "..done\n",
+      "..done\n",
+      "..done\n",
+      "..done\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(test_color)):\n",
-    "    test.classify_data(test_color[i])"
+    "    nn.classify_data(test_color[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['blue-ish', 'green-ish', 'yellow-ish', 'red-ish', 'purple-ish']"
+       "['blue-ish', 'grey-ish', 'yellow-ish', 'red-ish', 'purple-ish']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_label = [test.classify_callback_list[i][0]['label'] for i in range(len(test_color))]\n",
+    "predict_label = [nn.classify_callback_list[i][0]['label'] for i in range(len(test_color))]\n",
     "predict_label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8"
+       "1.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
