--- a/examples/Image Classifier.ipynb
+++ b/examples/Image Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,20 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ml5_test import ml5_image"
+    "from ml5_ipynb import ml5_image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = 'bird2.jpg'\n",
+    "img_path = 'pic/bird2.jpg'\n",
     "img = cv2.imread(img_path)\n",
     "img_rgba = cv2.cvtColor(img, cv2.COLOR_BGR2RGBA)\n",
     "width = 500\n",
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbf64e7cef0>"
+       "<matplotlib.image.AxesImage at 0x7fe93cd51dd8>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c7f3f1b85c747479a1ae5f8c3e1ff7d",
+       "model_id": "e1a6814106814859b52791f42aec3c25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..........Modeal is ready\n"
+      "....................................................Modeal is ready\n"
      ]
     }
    ],
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..done\n"
+      ".....done\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "   'confidence': 0.037507884204387665}]]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,13 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c629515acbb481e9829ed69e4467ca0",
+       "model_id": "d8a2f98dd18a4b0eb55cdd2964d3f37c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "............Modeal is ready\n"
+      "........Modeal is ready\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -214,23 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[{'label': 'jay', 'confidence': 0.9185490608215332},\n",
-       "  {'label': 'indigo bunting, indigo finch, indigo bird, Passerina cyanea',\n",
-       "   'confidence': 0.004537653643637896},\n",
-       "  {'label': 'bulbul', 'confidence': 0.001190462615340948}],\n",
-       " [{'label': 'indigo bunting, indigo finch, indigo bird, Passerina cyanea',\n",
+       "[[{'label': 'indigo bunting, indigo finch, indigo bird, Passerina cyanea',\n",
        "   'confidence': 0.4326675236225128},\n",
        "  {'label': 'jay', 'confidence': 0.15302245318889618},\n",
        "  {'label': 'hummingbird', 'confidence': 0.04288078844547272}]]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
