--- a/examples/Neural Network Simple Examples.ipynb
+++ b/examples/Neural Network Simple Examples.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ml5_test import ml5_init"
+    "from ml5_ipynb import ml5_init"
    ]
   },
   {
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78c221fca4ba4207888646369a9bd09a",
+       "model_id": "14ae52f2e0ab49408c6fe40060f75a9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,10 +44,10 @@
     }
    ],
    "source": [
-    "test = ml5_init.ML5Class()\n",
-    "test.options['debug']=True\n",
-    "test.options['task']='classification'\n",
-    "test.initialize_framework()\n",
+    "nn = ml5_init.ML5Class()\n",
+    "nn.options['debug']=True\n",
+    "nn.options['task']='classification'\n",
+    "nn.initialize_framework()\n",
     "# test.debugging_display()"
    ]
   },
@@ -76,7 +76,7 @@
     "for d in data:\n",
     "    i = {'r':d['r'], 'g': d['g'], 'b': d['b']}\n",
     "    o = {'color': d['color']}\n",
-    "    test.add_data(i,o)"
+    "    nn.add_data(i,o)"
    ]
   },
   {
@@ -88,17 +88,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".........................................................done\n"
+      ".........................................done\n"
      ]
     }
    ],
    "source": [
-    "test.normalize_data()\n",
+    "nn.normalize_data()\n",
     "trainingOptions = {\n",
     "  'epochs': 32,\n",
     "  'batchSize': 12\n",
     "}\n",
-    "test.train_data(trainingOptions)"
+    "nn.train_data(trainingOptions)"
    ]
   },
   {
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "test.classify_data({'r': 255, 'g': 0, 'b': 0})"
+    "nn.classify_data({'r': 255, 'g': 0, 'b': 0})"
    ]
   },
   {
@@ -132,7 +132,7 @@
     }
    ],
    "source": [
-    "test.classify_data({'r': 0, 'g': 0, 'b': 255})"
+    "nn.classify_data({'r': 0, 'g': 0, 'b': 255})"
    ]
   },
   {
@@ -143,12 +143,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'red-ish': 0.9461169242858887,\n",
+       "[{'red-ish': 0.9594436287879944,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.9461169242858887},\n",
-       " {'blue-ish': 0.0538831427693367,\n",
+       "  'confidence': 0.9594436287879944},\n",
+       " {'blue-ish': 0.040556494146585464,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.0538831427693367}]"
+       "  'confidence': 0.040556494146585464}]"
       ]
      },
      "execution_count": 8,
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "test.classify_callback_list[0]"
+    "nn.classify_callback_list[0]"
    ]
   },
   {
@@ -168,12 +168,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'blue-ish': 0.9119746685028076,\n",
+       "[{'blue-ish': 0.9019389152526855,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.9119746685028076},\n",
-       " {'red-ish': 0.08802536875009537,\n",
+       "  'confidence': 0.9019389152526855},\n",
+       " {'red-ish': 0.09806107729673386,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.08802536875009537}]"
+       "  'confidence': 0.09806107729673386}]"
       ]
      },
      "execution_count": 9,
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "test.classify_callback_list[1]"
+    "nn.classify_callback_list[1]"
    ]
   },
   {
@@ -202,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9ebd9dcd5f34be9bdd018f216c5a972",
+       "model_id": "0dba6829f0074aa7a0a180b4e21b2b35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,6 +212,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
     }
    ],
    "source": [
@@ -221,8 +228,8 @@
     "  'task': 'classification',\n",
     "  'debug': True\n",
     "}\n",
-    "test = ml5_init.ML5Class(options)\n",
-    "test.initialize_framework()"
+    "nn1 = ml5_init.ML5Class(options)\n",
+    "nn1.initialize_framework()"
    ]
   },
   {
@@ -235,10 +242,10 @@
     "for i in range(400):\n",
     "    if i%2==0:\n",
     "        x = np.random.randint(0, 200)\n",
-    "        test.add_data( [x],  ['left'])\n",
+    "        nn1.add_data( [x],  ['left'])\n",
     "    else:\n",
     "        x = np.random.randint(200,400)\n",
-    "        test.add_data( [x],  ['right'])"
+    "        nn1.add_data( [x],  ['right'])"
    ]
   },
   {
@@ -247,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.normalize_data()"
+    "nn1.normalize_data()"
    ]
   },
   {
@@ -259,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".............................................................................................................done\n"
+      ".......................................................................done\n"
      ]
     }
    ],
@@ -269,7 +276,7 @@
     "    'epochs': 32\n",
     "  }\n",
     "  \n",
-    "test.train_data(trainingOptions)"
+    "nn1.train_data(trainingOptions)"
    ]
   },
   {
@@ -286,7 +293,7 @@
     }
    ],
    "source": [
-    "test.classify_data([300])"
+    "nn1.classify_data([300])"
    ]
   },
   {
@@ -297,12 +304,12 @@
     {
      "data": {
       "text/plain": [
-       "[[{'right': 0.9985857605934143,\n",
+       "[[{'right': 0.9984588623046875,\n",
        "   'label': 'right',\n",
-       "   'confidence': 0.9985857605934143},\n",
-       "  {'left': 0.0014143474400043488,\n",
+       "   'confidence': 0.9984588623046875},\n",
+       "  {'left': 0.0015409841435030103,\n",
        "   'label': 'left',\n",
-       "   'confidence': 0.0014143474400043488}]]"
+       "   'confidence': 0.0015409841435030103}]]"
       ]
      },
      "execution_count": 15,
@@ -311,7 +318,7 @@
     }
    ],
    "source": [
-    "test.classify_callback_list"
+    "nn1.classify_callback_list"
    ]
   },
   {
