--- a/examples/Color Classification.ipynb
+++ b/examples/Color Classification.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ml5_ipynb import ml5_init"
+    "from ml5_ipynb import ml5_nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7a6aa55f17e4f33b41ed3a9f79a051f",
+       "model_id": "5ba5a1bc81f1471e8fbffb5e9fa848e3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(ML5Class(status='deferring flush until render'), Text(value='deferring flush until render', des…"
+       "VBox(children=(neuralNetwork(status='deferring flush until render'), Text(value='deferring flush until render'…"
       ]
      },
      "metadata": {},
@@ -30,13 +30,22 @@
     }
    ],
    "source": [
-    "nn = ml5_init.ML5Class()\n",
+    "nn = ml5_nn.neuralNetwork()\n",
     "nn.options['dataUrl'] = 'data/colorData.json'\n",
     "nn.options['inputs']=['r','g','b']\n",
     "nn.options['outputs'] = ['label']\n",
     "nn.options['task'] = 'classification'\n",
     "nn.options['debug']=True\n",
     "nn.initialize_framework()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn.normalize_data()"
    ]
   },
   {
@@ -48,12 +57,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...................................................................................................................................................................................................done\n"
+      ".............................................................................................................................................................done\n"
      ]
     }
    ],
    "source": [
-    "nn.normalize_data()\n",
     "trainingOptions = {'epochs': 20, 'batchSize' : 64}\n",
     "nn.train_data(trainingOptions)"
    ]
@@ -82,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "......done\n",
+      "...done\n",
       "..done\n",
       "..done\n",
       "..done\n",
@@ -103,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "['blue-ish', 'grey-ish', 'yellow-ish', 'red-ish', 'purple-ish']"
+       "['blue-ish', 'green-ish', 'yellow-ish', 'red-ish', 'purple-ish']"
       ]
      },
      "execution_count": 10,
@@ -124,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.8"
       ]
      },
      "execution_count": 11,
@@ -136,6 +144,48 @@
     "import numpy as np\n",
     "sum(np.array(predict_label) == np.array(test_label))/len(test_label)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
