--- a/examples/Neural Network Simple Examples.ipynb
+++ b/examples/Neural Network Simple Examples.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ml5_ipynb import ml5_init"
+    "from ml5_ipynb import ml5_nn"
    ]
   },
   {
@@ -24,12 +24,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14ae52f2e0ab49408c6fe40060f75a9a",
+       "model_id": "e76c9869b2354959bff0daff833b9702",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(ML5Class(status='deferring flush until render'), Text(value='deferring flush until render', des…"
+       "VBox(children=(neuralNetwork(status='deferring flush until render'), Text(value='deferring flush until render'…"
       ]
      },
      "metadata": {},
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "nn = ml5_init.ML5Class()\n",
+    "nn = ml5_nn.neuralNetwork()\n",
     "nn.options['debug']=True\n",
     "nn.options['task']='classification'\n",
     "nn.initialize_framework()\n",
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".........................................done\n"
+      "........................................done\n"
      ]
     }
    ],
@@ -143,12 +143,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'red-ish': 0.9594436287879944,\n",
+       "[{'red-ish': 0.9544015526771545,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.9594436287879944},\n",
-       " {'blue-ish': 0.040556494146585464,\n",
+       "  'confidence': 0.9544015526771545},\n",
+       " {'blue-ish': 0.04559847339987755,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.040556494146585464}]"
+       "  'confidence': 0.04559847339987755}]"
       ]
      },
      "execution_count": 8,
@@ -168,12 +168,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'blue-ish': 0.9019389152526855,\n",
+       "[{'blue-ish': 0.9538745880126953,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.9019389152526855},\n",
-       " {'red-ish': 0.09806107729673386,\n",
+       "  'confidence': 0.9538745880126953},\n",
+       " {'red-ish': 0.046125348657369614,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.09806107729673386}]"
+       "  'confidence': 0.046125348657369614}]"
       ]
      },
      "execution_count": 9,
@@ -202,23 +202,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dba6829f0074aa7a0a180b4e21b2b35",
+       "model_id": "1ede60aceb9c4198b053021c74933ad1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(ML5Class(status='deferring flush until render'), Text(value='deferring flush until render', des…"
+       "VBox(children=(neuralNetwork(status='deferring flush until render'), Text(value='deferring flush until render'…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "."
-     ]
     }
    ],
    "source": [
@@ -228,7 +221,7 @@
     "  'task': 'classification',\n",
     "  'debug': True\n",
     "}\n",
-    "nn1 = ml5_init.ML5Class(options)\n",
+    "nn1 = ml5_nn.neuralNetwork(options)\n",
     "nn1.initialize_framework()"
    ]
   },
@@ -266,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".......................................................................done\n"
+      "...................................................................done\n"
      ]
     }
    ],
@@ -304,12 +297,12 @@
     {
      "data": {
       "text/plain": [
-       "[[{'right': 0.9984588623046875,\n",
+       "[[{'right': 0.9976108074188232,\n",
        "   'label': 'right',\n",
-       "   'confidence': 0.9984588623046875},\n",
-       "  {'left': 0.0015409841435030103,\n",
+       "   'confidence': 0.9976108074188232},\n",
+       "  {'left': 0.0023891092278063297,\n",
        "   'label': 'left',\n",
-       "   'confidence': 0.0015409841435030103}]]"
+       "   'confidence': 0.0023891092278063297}]]"
       ]
      },
      "execution_count": 15,
