--- a/examples/Feature Extractor.ipynb
+++ b/examples/Feature Extractor.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ml5_test import ml5_init\n",
+    "from ml5_test import ml5_nn\n",
     "import cv2\n",
     "import os\n",
     "import numpy as np\n",
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "test = ml5_init.ML5Class()"
+    "test = ml5_nn.neuralNetwork()"
    ]
   },
   {
