--- a/examples/Neural Network Simple Examples.ipynb
+++ b/examples/Neural Network Simple Examples.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e76c9869b2354959bff0daff833b9702",
+       "model_id": "9acbcd057e784005a923a96154c42b9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,13 +34,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "."
-     ]
     }
    ],
    "source": [
@@ -88,14 +81,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "........................................done\n"
+      "..................................................................done\n"
      ]
     }
    ],
    "source": [
     "nn.normalize_data()\n",
     "trainingOptions = {\n",
-    "  'epochs': 32,\n",
+    "  'epochs': 80,\n",
     "  'batchSize': 12\n",
     "}\n",
     "nn.train_data(trainingOptions)"
@@ -110,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..done\n"
+      ".done\n"
      ]
     }
    ],
@@ -127,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..done\n"
+      ".done\n"
      ]
     }
    ],
@@ -143,12 +136,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'red-ish': 0.9544015526771545,\n",
+       "[{'red-ish': 0.9906034469604492,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.9544015526771545},\n",
-       " {'blue-ish': 0.04559847339987755,\n",
+       "  'confidence': 0.9906034469604492},\n",
+       " {'blue-ish': 0.009396624751389027,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.04559847339987755}]"
+       "  'confidence': 0.009396624751389027}]"
       ]
      },
      "execution_count": 8,
@@ -168,12 +161,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'blue-ish': 0.9538745880126953,\n",
+       "[{'blue-ish': 0.979840099811554,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.9538745880126953},\n",
-       " {'red-ish': 0.046125348657369614,\n",
+       "  'confidence': 0.979840099811554},\n",
+       " {'red-ish': 0.020159941166639328,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.046125348657369614}]"
+       "  'confidence': 0.020159941166639328}]"
       ]
      },
      "execution_count": 9,
