--- a/examples/Object Detection using YOLO.ipynb
+++ b/examples/Object Detection using YOLO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f86c56e6898>"
+       "<matplotlib.image.AxesImage at 0x7fdc00199e80>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -342,13 +342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edbe49c77fd24f11bd29fe3d12bc011e",
+       "model_id": "abdc7b4020fd4ad88126fc7581d64875",
        "version_major": 2,
        "version_minor": 0
       },
@@ -363,7 +363,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..............Modeal is ready\n"
+      "........Modeal is ready\n"
      ]
     }
    ],
@@ -373,14 +373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".............done\n"
+      "...............done\n"
      ]
     }
    ],
@@ -399,16 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f86cec49898>"
+       "<matplotlib.image.AxesImage at 0x7fdbe748c9b0>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -441,16 +441,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tie 345 164 24 94\n",
+      "person 435 23 169 569\n",
+      "person 582 154 155 390\n",
+      "tie 617 256 19 73\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f86c9465748>"
+       "<matplotlib.image.AxesImage at 0x7fdbed2aaeb8>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -475,6 +485,7 @@
     "    normalized_y = int(dt['normalized']['y']*height)\n",
     "    normalized_w = int(dt['normalized']['width']*width)\n",
     "    normalized_h = int(dt['normalized']['height']*height)\n",
+    "    print(dt['label'],normalized_x,normalized_y,normalized_w,normalized_h )\n",
     "    normalized_img = cv2.rectangle(normalized_img,(normalized_x,normalized_y),\n",
     "                        (normalized_x+normalized_w,normalized_y+normalized_h),(0,255,0),2)\n",
     "\n",
@@ -490,16 +501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f86aa70c438>"
+       "<matplotlib.image.AxesImage at 0x7fdbe7de2a58>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -530,13 +541,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53f391e20f8d464593dfbdc025989c96",
+       "model_id": "2f2bc01ceb0c4be2a7449d943b6193e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -561,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -573,13 +584,13 @@
     }
    ],
    "source": [
-    "model_multi.detect_result = []\n",
-    "model_multi.image_detect('pic/meeting.png',width=width,height=height)"
+    "model_multi2.detect_result = []\n",
+    "model_multi2.image_detect('pic/meeting.png',width=width,height=height)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -593,10 +604,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f86adccc630>"
+       "<matplotlib.image.AxesImage at 0x7fdbe80ad8d0>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -615,8 +626,8 @@
    ],
    "source": [
     "normalized_img = img_rgba.copy()\n",
-    "for i in range(len(model_multi.detect_result)):\n",
-    "    dt = model_multi.detect_result[i]\n",
+    "for i in range(len(model_multi2.detect_result)):\n",
+    "    dt = model_multi2.detect_result[i]\n",
     "    normalized_x = int(dt['normalized']['x']*width)\n",
     "    normalized_y = int(dt['normalized']['y']*height)\n",
     "    normalized_w = int(dt['normalized']['width']*width)\n",
