--- a/examples/Color classification widget.ipynb
+++ b/examples/Color classification widget.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faec6ba052c14f4aa755d940d5c8d5f0",
+       "model_id": "f5efad4ae0424d3a9d0bde657f247b93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...........................................................................................................................done\n"
+      "...............................................................................................................................................done\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c39a3f21ade422f98c4ac688b6e9549",
+       "model_id": "5bcd6b5e97bc4746a5342387e3522bf2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +160,7 @@
     "\n",
     "    element.text({\n",
     "        x: 310, y:25, name: \"explanation\",\n",
-    "        text: \"Choose a color to predict\",\n",
+    "        text: \"Choose a color and click the circle with label of True to predict\",\n",
     "    })\n",
     "\n",
     "    // Center and scale the figure to fit in the available area.\n",
