--- a/examples/Color classification widget.ipynb
+++ b/examples/Color classification widget.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5efad4ae0424d3a9d0bde657f247b93",
+       "model_id": "19487918647a4a0996f02e127e57542b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...............................................................................................................................................done\n"
+      "....................................................................................................................................................................................................................................................................done\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bcd6b5e97bc4746a5342387e3522bf2",
+       "model_id": "e5ea306648f84691b3c3234d357421b6",
        "version_major": 2,
        "version_minor": 0
       },
