--- a/examples/Object detection comparison between yolo and cocossd.ipynb
+++ b/examples/Object detection comparison between yolo and cocossd.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -37,10 +37,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fcac3de6358>"
+       "<matplotlib.image.AxesImage at 0x7fe0cc0c0c18>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f00197db3fdf40eaac32ad71c43f88df",
+       "model_id": "fae0782658a2447c861d55f057f029a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...................Model is ready\n"
+      "........Model is ready\n"
      ]
     }
    ],
@@ -110,14 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..........done\n"
+      ".........done\n",
+      "CPU times: user 2.71 s, sys: 103 ms, total: 2.81 s\n",
+      "Wall time: 3.89 s\n"
      ]
     }
    ],
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -163,13 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3f0f88ea4834509b2af6ea452ca2092",
+       "model_id": "af62e8fc808e41bdabc58dde97043b95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "............Model is ready\n"
+      ".........Model is ready\n"
      ]
     }
    ],
@@ -194,14 +196,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".......done\n"
+      "........done\n",
+      "CPU times: user 2.71 s, sys: 99.3 ms, total: 2.8 s\n",
+      "Wall time: 3.77 s\n"
      ]
     }
    ],
@@ -211,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
