--- a/examples/Image classifier on bird examples.ipynb
+++ b/examples/Image classifier on bird examples.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fec2db0a240>"
+       "<matplotlib.image.AxesImage at 0x7fa33c608828>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b78b35dc59b74318b5484c3325cb1d8b",
+       "model_id": "fa0573209cc644f78f45b8b62d57b8af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...........Model is ready\n"
+      "..........Model is ready\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "   'confidence': 0.0028440551832318306}]]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,16 +158,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c52b7affa01e432696de41ddf61357f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(imageClassifier(status='deferring flush until render'), Text(value='deferring flush until rende…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "......Model is ready\n"
+     ]
+    }
+   ],
    "source": [
     "model2 = ml5_image.imageClassifier('MobileNet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,28 +198,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".......done\n"
+     ]
+    }
+   ],
    "source": [
     "model2.classify_data(data,width=width,height=height)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[{'label': 'robin, American robin, Turdus migratorius',\n",
+       "   'confidence': 0.9312137365341187},\n",
+       "  {'label': 'worm fence, snake fence, snake-rail fence, Virginia fence',\n",
+       "   'confidence': 0.0036170955281704664},\n",
+       "  {'label': 'brambling, Fringilla montifringilla',\n",
+       "   'confidence': 0.0029059851076453924}]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model2.classify_callback_list"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
